@@ -2,14 +2,14 @@
 
 INCLUDES = -I$(top_srcdir)/common -I$(top_srcdir)/include
 
-noinst_HEADERS = indexergraph.h omindexernode.h testnodes.h
+noinst_HEADERS = indexergraph.h omindexernode.h testnodes.h deleter_map.h
 
 noinst_LTLIBRARIES = libindexgraph.la
 
 #noinst_PROGRAMS = nodetest
-
+#
 #nodetest_SOURCES = nodetest.cc
-
+#
 #nodetest_LDADD = libindexgraph.la ../../libomus.la
 
 libindexgraph_la_SOURCES = indexergraph.cc omindexernode.cc
