@@ -49,23 +49,20 @@ int main() {
 	    builder.register_node_type(ndesc);
 	}
 	auto_ptr<OmIndexer> indexer = builder.build_from_file("test.xml");
-	Message msg(new Record());
-	msg->name = "foo";
-	msg->type = Record::rt_string;
-	msg->u.string_val = new std::string("bar");
+	Message msg(new Record("foo", "bar"));
 	indexer->set_input(msg);
 	Message result = indexer->get_output();
 
-	cout << "Name: " << result->name << endl;
-	switch (result->type) {
+	cout << "Name: " << result->get_name() << endl;
+	switch (result->get_type()) {
 	    case Record::rt_int:
-		cout << result->u.int_val;
+		cout << result->get_int();
 		break;
 	    case Record::rt_double:
-		cout << result->u.double_val;
+		cout << result->get_double();
 		break;
 	    case Record::rt_string:
-		cout << *result->u.string_val;
+		cout << result->get_string();
 		break;
 	    case Record::rt_vector:
 		cout << "Vector";
