@@ -1,3 +1,10 @@
+Mon Sep  4 18:30:39 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Reduced the number of copies of messages needed in indexing
+	  networks.
+	
+	* Added some type safety to the Record class.
+
 Mon Sep 04 17:40:18 BST 2000 Olly Betts
 
 	* Updated TODO.
